添加 meta 描述跟圖片

--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
     <title>Toriii Technology</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" href="favicon.png" type="image/x-icon" />
+
+    <meta property="og:title" content="Toriii Technology" />
+    <meta property="og:description" content="Our team specializes in high frequency and low latency solutions for digital asset markets." />
+    <meta property="og:image" content="https://www.toriii.tech/favicon.png" />
+    <meta property="og:url" content="https://www.toriii.tech" />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="Toriii Technology" />
+
     <style>
       @import url("https://fonts.googleapis.com/css?family=Jersey+25:400|Libre+Barcode+128+Text:400");
     </style>
