新增 1200 x 630 meta image

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <meta property="og:title" content="Toriii Technology" />
     <meta property="og:description" content="Our team specializes in high frequency and low latency solutions for digital asset markets." />
-    <meta property="og:image" content="https://www.toriii.tech/favicon.png" />
+    <meta property="og:image" content="https://www.toriii.tech/meta_image.png" />
     <meta property="og:url" content="https://www.toriii.tech" />
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="Toriii Technology" />
