--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" href="favicon.png" type="image/x-icon" />
 
-    <meta property="og:url" content="https://www.toriii.tech" />
+    <meta property="og:url" content="https://toriii-market-maker.github.io/toriii-official-website/" />
     <meta property="og:locale" content="en_TW" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Toriii Technology" />
     <meta property="og:description" content="Our team specializes in high frequency and low latency solutions for digital asset markets." />
-    <meta property="og:image" content="https://www.toriii.tech/meta_image.png" />
+    <meta property="og:image" content="meta_image.png" />
     <meta property="og:image:type" content="image/png" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
