--- a/index.html
+++ b/index.html
@@ -4,6 +4,16 @@
     <meta charset="utf-8">
     <title>Toriii Technology</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta property="og:url" content="https://toriii-market-maker.github.io/toriii-official-website/" />
+    <meta property="og:locale" content="en_TW" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Toriii Technology" />
+    <meta property="og:description" content="Our team specializes in high frequency and low latency solutions for digital asset markets." />
+    <meta property="og:image" content="meta_image.png" />
+    <meta property="og:image:type" content="image/png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:site_name" content="Toriii Technology" />
     <link rel="icon" href="/favicon.31b65a3d.png" type="image/x-icon">
     <style>@import "https://fonts.googleapis.com/css?family=Jersey+25:400|Libre+Barcode+128+Text:400";
 
