--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Toriii Technology</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta property="og:url" content="https://toriii-market-maker.github.io/toriii-official-website/" />
+    <meta property="og:url" content="https://www.toriii.tech" />
     <meta property="og:locale" content="en_TW" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Toriii Technology" />
