--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Toriii Technology" />
     <meta property="og:description" content="Our team specializes in high frequency and low latency solutions for digital asset markets." />
-    <meta property="og:image" content="https://www.toriii.tech/meta_image.png" />
+    <meta property="og:image" content="https://c.animaapp.com/2Qt2R1WI/img/image-2.png" />
     <meta property="og:image:type" content="image/png" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
